--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout du code
+        uses: actions/checkout@v4
+
       - name: Installer Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Installer les dépendances
         run: pip install -r requirements.txt
       - name: Lancer les tests
