--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.ACR_IMAGE }}
 
       - name: azure login
-        uses: azure/login/v2
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
         
@@ -50,7 +50,6 @@ jobs:
           CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
           DNS_LABEL: ${{ secrets.DNS_LABEL }}
           REGION: ${{ secrets.REGION }}
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
         run: |
           chmod +x ./deploiement_api.sh
           bash ./deploiement_api.sh
